bug(home-page):fix horizontal page-overflow - style the subscription form to have a stacked layout on smaller devices and tabs - fix the broken layout of the menu items on the nav bar on desktop+ screens

--- a/src/index.scss
+++ b/src/index.scss
@@ -111,10 +111,6 @@ a {
   font-family: $headerFont, sans-serif;
 }
 
-// *** Setting a max-width for the app *** //
-.navbar-container nav {
-}
-
 .navbar-container {
   height: 60px;
   background: var(--inverseTextColor);
@@ -132,4 +128,9 @@ a {
 .categories {
   display: block;
   width: 100%;
+}
+
+// The subscription section on the home page
+.subscription-section {
+  padding: 2em 0;
 }
