--- a/src/sass/components/_banner.scss
+++ b/src/sass/components/_banner.scss
@@ -47,6 +47,7 @@
 }
 
 .plain-banner {
+  width: 100%;
   &.primary {
     background-color: var(--primaryColor);
     color: var(--white);
