--- a/src/sass/components/_nav.scss
+++ b/src/sass/components/_nav.scss
@@ -4,12 +4,12 @@
     top: 0;
     left: 0;
     height: 100vh;
-    max-height: 500px;
+    min-height: 400px;
     width: 100%;
-    background-color: rgba(255, 255, 255, 0.93);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    background-color: rgba(255, 255, 255, 0.95);
+    flex-direction: column;
+    -ms-flex-direction: column;
+    padding: 12em 0 0;
     transform: scaleY(0);
     opacity: 0;
     transition: 0.2s ease;
@@ -28,7 +28,7 @@
 
     li {
       width: fit-content;
-      margin: auto;
+      margin: 0 auto;
 
       a {
         font-size: 0.95rem;
@@ -46,44 +46,3 @@
     }
   }
 }
-
-// #main-nav {
-//   background-color: $white;
-//   @include boxShadow(0 1px 3px rgba(0, 0, 0, 0.1));
-//   position: fixed;
-//   top: 0;
-//   left: 0;
-//   z-index: 2;
-//   width: 100%;
-
-//   &__inner {
-//     padding: 1em 3em;
-//     max-width: $pageMaxWidth;
-//     justify-content: space-between;
-//     align-items: center;
-//     margin: auto;
-//   }
-// }
-
-// #main-nav-menu {
-//   margin: 0;
-
-//   .menu-item {
-//     font-size: 0.8rem;
-//     // font-weight: bold;
-
-//     &:not(:first-child) {
-//       margin-left: 2em;
-//     }
-
-//     &:hover {
-//       a {
-//         color: $primaryColor;
-
-//         &.auth-btn {
-//           color: $white;
-//         }
-//       }
-//     }
-//   }
-// }
